@@ -130,14 +130,6 @@ Firefox, Opera, and Internet Explorer are all supported.  Not sure about Chrome
 
 sub logout {
     my ($request) = @_;    
-    @{$request->{scripts}} = 
-                  qw(UI/logout/iexplore.js 
-                     UI/logout/firefox.js
-                     UI/logout/opera.js
-                     UI/logout/safari.js
-                     UI/logout/konqueror.js
-                     UI/logout/epiphany.js
-                   );
     $request->{callback}   = "";
     $request->{endsession} = 1;
     if($request->{dbh}){LedgerSMB::Auth::session_destroy($request);}#if logout on already logged out session
